using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimationHashValues
{
    public static int LOCOMOTION_BLEND_TREE = Animator.StringToHash("Blend");
    public static int PICKUP_ANIMATION = Animator.StringToHash("PickUp");
    public static int JUMP_ANIMATION = Animator.StringToHash("Jump");
}
